--- a/projects/riker-core/riker-core.gradle
+++ b/projects/riker-core/riker-core.gradle
@@ -44,6 +44,6 @@ dependencies {
 dependencies {
     // spek test framework.
     testCompile group: "org.jetbrains.spek", name: "spek", version: "0.1.181", {
-        exclude group: "org.hamcrest"
+        //exclude group: "org.hamcrest"
     }
 }
